creaate proffit report by date diapason
