# routes/api.php
@@ -8,6 +8,7 @@ use App\Http\Controllers\PageController;
 use App\Http\Controllers\ProductController;
 use App\Http\Controllers\ProductExportController;
 use App\Http\Controllers\ProductImportController;
+use App\Http\Controllers\ProfitReportController;
 use App\Http\Controllers\SharedAccessController;
 use App\Http\Controllers\TagController;
 use App\Http\Controllers\UserController;
@@ -23,6 +24,7 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::apiResource('products', ProductController::class);
     Route::get('export-products', [ProductExportController::class, 'export']);
     Route::post('import-products', [ProductImportController::class, 'import']);
+    Route::get('profit-report', [ProfitReportController::class, 'generateReport']);
 
     Route::apiResource('orders', OrderController::class);
 
